# p5r-freecam

./: .gitignore  Build.ps1  BuildClient.ps1  CHANGELOG.md  Cargo.toml  README.md  env.yaml
buildscript/p5rpc.freecam.BuildScript/: Argument.cs  CodePackage.cs  EnvManager.cs  Executor.cs  Program.cs  Publish.cs  Terminal.cs  Utils.cs  p5rpc.freecam.BuildScript.sln
p5r-freecam/: Cargo.toml  build.rs
p5r-freecam/data/: package.toml
p5r-freecam/src/: battle.rs  camera.rs  event.rs  field.rs  globals.rs  lib.rs  version.rs
p5r-freecam/src/gui/: app.rs  utils.rs  win32.rs
p5r-freecam/src/gui/d3d11/: backup.rs  shader.rs  state.rs
p5r-freecam/src/hooks/: battle.rs  event.rs  field.rs  title.rs
p5r-freecam/src/state/: camera.rs  controls.rs  io.rs  node.rs  path.rs  window.rs
p5rpc.freecam/: BuildLinked.ps1  Config.cs  ModConfig.json  Publish.ps1  p5rpc.freecam.csproj  p5rpc.freecam.sln
p5rpc.freecam/Template/: ModBase.cs  ModContext.cs  Startup.cs
p5rpc.freecam/Template/Configuration/: Configurable.cs  Configurator.cs  ConfiguratorMixinBase.cs  Utilities.cs
xrd744-lib/: Cargo.toml
xrd744-lib/src/: lib.rs
xrd744-lib/src/btl/: camera.rs  frequency.rs  package.rs
xrd744-lib/src/evt/: function_table.rs  task.rs
xrd744-lib/src/fld/: camera.rs  main.rs  proc.rs
xrd744-lib/src/fld/panel/: roadmap.rs
xrd744-lib/src/gfw/: camera.rs
