[package]
name = "p5r-freecam"
description = "Freecam mod for Persona 5 Royal"
version.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
edition.workspace = true

[dependencies]
allocator-api2 = "0.2.21"
bitflags = "2.9.1"
glam = "0.30.5"
# opengfd = { git = "https://github.com/rirurin/opengfd", default-features = false, features = [ "v1-core", "image_loader", "serialize" ] }
opengfd = { path = "../../opengfd/opengfd", default-features = false, features = [ "v1-core", "image_loader", "serialize" ] }
riri-mod-tools = { git = "https://github.com/rirurin/riri-mod-tools" }
riri-mod-tools-proc = { git = "https://github.com/rirurin/riri-mod-tools" }
riri-mod-tools-rt = { git = "https://github.com/rirurin/riri-mod-tools" }
xrd744-lib = { path = "../xrd744-lib" }

[target.'cfg(windows)'.dependencies.windows]
version = "0.61.1"
features = [
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse"
]

[build-dependencies]
csbindgen = { git = "https://github.com/rirurin/csbindgen", branch = "riri-mod-tools" }
riri-mod-tools = { git = "https://github.com/rirurin/riri-mod-tools" }
syn = { version = "2.0", features = ["full"] }
toml = "0.8"
walkdir = "2.5"
quote = "1.0"