[package]
name = "xrd744-lib"
description = "Modding API for Persona 5 Royal"
version.workspace = true
authors.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
edition.workspace = true

[dependencies]
allocator-api2 = "0.2.21"
bitflags = "2.9.3"
glam = "0.30.5"

cpp-types = { git = "https://github.com/rirurin/cpp-types" }
opengfd = { git = "https://github.com/rirurin/opengfd", default-features = false, features = [ "v1-core", "image_loader", "serialize" ] }
riri-mod-tools-proc = { git = "https://github.com/rirurin/riri-mod-tools" }
riri-mod-tools-rt = { git = "https://github.com/rirurin/riri-mod-tools", default-features = false }

[target.'cfg(windows)'.dependencies.windows]
version = "0.61.1"
features = [
    "Win32_Globalization",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse"
]